# enter-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/agents/: __init__.py  base.py  classifier.py  context.py  extraction.py  legal_analysis.py  risk.py  strategy.py
app/api/: jobs.py  main.py  routes.py  schemas.py
app/core/: config.py  logging.py
app/enrichment/: __init__.py  cnj.py  datajud.py  node.py
app/evaluation/: __init__.py  __main__.py  golden.py  judge.py  metrics.py  runner.py
app/ingestion/: __init__.py  language.py  ocr.py  pdf_reader.py  service.py
app/llm/: __init__.py  base.py  factory.py  mock_client.py  openai_client.py  pricing.py
app/observability/: __init__.py  store.py
app/orchestration/: __init__.py  graph.py  state.py
app/prompts/: __init__.py  base.py  classifier.py  extraction.py  judge.py  legal_analysis.py  risk.py  strategy.py
app/rag/: __init__.py  chunking.py  embeddings.py  factory.py  pipeline.py  vector_store.py
app/reporting/: __init__.py  convert.py  markdown.py
app/schemas/: __init__.py  analysis.py  common.py  document.py  enrichment.py  evaluation.py  lawsuit.py  rag.py  report.py  risk.py  strategy.py  trace.py
app/services/: __init__.py  analysis.py  composer.py
data/: runs.jsonl
docs/: architecture.md  demo-script.md
docs/adr/: 0001-use-langgraph.md  0002-llm-provider-abstraction.md  0003-chromadb-vector-store.md  0004-async-first.md  0005-pymupdf-ocr-fallback.md  0006-section-aware-chunking.md  0007-deterministic-report-composer.md  0008-citation-based-groundedness.md  0009-in-process-async-jobs.md
eval_data/: consumer_billing.json  labor_overtime.json
frontend/: streamlit_app.py
tests/: test_api.py  test_enrichment.py  test_evaluation.py  test_exports.py  test_graph.py  test_ingestion.py  test_llm.py  test_markdown.py  test_observability.py  test_rag.py  test_schemas.py  test_service.py
