[project]
name = "litigation-copilot"
version = "0.1.0"
description = "AI Litigation Copilot - multi-agent lawsuit analysis with RAG, structured outputs and full observability"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gabriel", email = "gabrielbhl@gmail.com" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.40",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
