[project]
name = "litigation-copilot"
version = "0.1.0"
description = "AI Litigation Copilot - multi-agent lawsuit analysis with RAG, structured outputs and full observability"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gabriel", email = "gabrielbhl@gmail.com" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.40",
    "structlog>=24.1",
    "pymupdf>=1.24",
    "langdetect>=1.0.9",
    "chromadb>=0.5",
    "langgraph>=0.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "python-docx>=1.1",
    "reportlab>=4.0",
]

[project.optional-dependencies]
frontend = [
    "streamlit>=1.35",
    "requests>=2.31",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
# frontend/ and eval_data/ are not installable packages - only app/ is.
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
